docs: consolidate project documentation